# CV_AI-Navigation

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: release-on-merge.yml
src/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/armor_tracker/src/: extended_kalman_filter.cpp  pnp_solver.cpp  tracker.cpp  tracker_node.cpp
src/auto_aim_interfaces/: CMakeLists.txt
src/auto_aim_interfaces/msg/: GimbalCmd.msg
src/bbox_filter_node/: README.md  start_docker_and_nodes.sh
src/bbox_filter_node/filter/: package.xml  setup.py
src/cmd_vel_subscriber/: package.xml  setup.cfg  setup.py
src/cmd_vel_subscriber/cmd_vel_serial/: .cmd_vel_subscriber.py.swp  cmd_vel_subscriber.py  serial_new_communication.py  serial_try.py
src/cv_models_scripts/: README.md
src/cv_models_scripts/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
src/cv_models_scripts/scripts/: download_dataset.py  test.py  test_on_video.py  train.py  visualize_metrics.py
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: debug.launch.py  fake_launch_file.launch.py  realsense_only_det.launch.py  realsense_only_det_adam.launch.py  realsense_only_det_flip.launch.py  realsense_only_det_flip_adam.launch.py  realsense_only_det_image_only.launch.py  realsense_only_det_rtdetr.launch.py  test_realsense_optimized_launcher.launch.py
src/launch_pkg/urdf/: zed_descr.urdf.xacro  (+1 more)
src/rm_trajectory/: CMakeLists.txt  README.md  package.xml
src/rm_trajectory/include/rm_trajectory/: trajectory_solver.hpp
src/rm_trajectory/src/: trajectory_solver.cpp
(+81 files in other folders)
